deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-record-link-service 
  labels:
    app: laa-record-link-service 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laa-record-link-service # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: laa-record-link-service  # this should match the selector in service.yml
    spec:
      containers:
        - name: laa-record-link-service
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1200Mi"
              cpu: "300m"
            limits:
              memory: "3000Mi"
              cpu: "1"
