deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-record-linking-service
  labels:
    app: laa-record-linking-service
spec:
  selector:
    app: laa-record-linking-service # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
